# IDS-Rust

./: LICENSE  README.md
code_source/ids/src/: lib.rs
deploy/: install.sh  rust-ids
ids/: Cargo.toml
ids/src/: alert.rs  config.rs  detector.rs  main.rs
