[package]
name = "rust-ids"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
pcap = "2.4.0"
chrono = { version = "=0.4.43", features = ["serde"] }
regex = "1.10"
syslog = "7.0.0"
etherparse = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "=0.3.45"

[profile.release]
opt-level = 3
lto = true
[lib]
name = "rust_ids"
path = "src/lib.rs"
